--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: whitesmoke;
+    background: rgb(255, 196, 196);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -38,19 +38,19 @@ button {
     height: inherit;
     color: white;
     font-size: 1.2em;
-    border-radius: 30px;
+    border-radius: 0px;
     outline: none;
     cursor: pointer;
     box-shadow: 0 2px 4px gray;
-    border: 2px solid #e94d58;
+    border: 4px solid #3aa3a0;
     font-size: 1.2em;
 }
 button:nth-child(1) {
     margin-left: -200px;
-    background: #e94d58;
+    background: #3aa3a0;
 }
 button:nth-child(2) {
     margin-right: -200px;
     background: white;
-    color: #e94d58;
+    color: #3aa3a0;
 }
